[build-system]
requires = ["setuptools", "Cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["sphinx*"]

[tool.setuptools.dynamic]
version = {file = "omas/version"}

[project]
name = 'omas'
dynamic = ["version"]
description = 'Ordered Multidimensional Array Structures'
authors = [
    {name = 'Orso Meneghini', email = 'meneghini@fusion.gat.com'},
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'License :: OSI Approved :: MIT License',
]
keywords = ["integrated modeling",  "OMFIT", "IMAS",  "ITER"]

requires-python = '>=3.6'
dependencies = [
    'numpy>=1.16.1',
    'uncertainties',
    'pint',
    'netCDF4',
    'boto3',
    'matplotlib',
    'scipy',
    'h5py',
    'pymongo',
    'dnspython',
    'xmltodict',
    'xarray',
    'setuptools>=41.2',
    'tqdm',
]
readme="README.md"

[project.urls]
Homepage = 'https://gafusion.github.io/omas'
Source = 'https://github.com/gafusion/omas'

[project.optional-dependencies]
machine = [
        'omfit_classes',
        'pexpect',
        'fortranformat',
        'pygacode',
]
hdc = ['pyhdc']
imas = ['imas']
uda = ['pyuda']
build_sdist = ['build']
build_structures = ['bs4']
build_documentation = ['Sphinx', 'sphinx-bootstrap-theme', 'sphinx-gallery', 'Pillow']
